fix checkbox and overflow overlay

--- a/submissions/iamsokol/popup/main.scss
+++ b/submissions/iamsokol/popup/main.scss
@@ -27,26 +27,12 @@ a{
     text-decoration: underline;
   }
 }
-.more{
-  background: #ebebeb;
-  text-align: center;
-  width: 100%;
-  cursor: pointer;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  &:hover{
-    background: #c1c1c1;
-  }
-  & ~ * {
-    display: none;
-  }
-}
 .more-button{
   display: flex;
   width: 100%;
   flex-wrap: wrap;
   padding-top: 30px;
+  position: relative;
 }
 .more-link{
   width: 100%;
@@ -66,8 +52,7 @@ a{
   line-height: 40px;
   z-index: 1;
 }
-.block{
-}
+
 .block-bell{
   cursor: pointer;
   width: 20px;
@@ -89,11 +74,12 @@ a{
   flex-wrap: wrap;
   justify-content: start;
   width: 320px;
-  height: 490px;
+  height: 480px;
   padding: 20px 30px;
   background: #fff;
   border: 1px solid #ccc;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  overflow: overlay;
 }
 .block-icons-item{
   cursor: pointer;
@@ -152,27 +138,37 @@ a{
   }
 }
 .checkbox-more{
-  display: none;
+  background: #ebebeb;
+  width: calc(100% + 60px);
+  height: 40px;
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  left: -30px;
+  -webkit-appearance: none;
+  &:after{
+    content: 'More';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    line-height: 40px;
+  }
+  &:hover{
+    background: #c1c1c1;
+  }
+  & ~ * {
+    display: none;
+  }
   &:checked{
-    & ~ .block-icons{
-      .more{
-        height: 1px;
-        overflow: hidden;
-        margin-bottom: 40px;
-        width: calc(100% - 60px);
-        left: 50%;
-        transform: translateX(-50%);
-        & ~ * {
-          display: block;
-        }
-      }
-    }
+    width: 100%;
+    height: 1px;
+    font-size: 0;
+    left: 0;
+    outline: none;
     & ~ .block-icons-item{
       display: block;
-    }
-    & ~ .block-icons{
-      overflow-y: scroll;
-      padding: 20px 15px 20px 30px;
     }
   }
 }
